<resources>
    <string name="app_name">Sample School Admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="internal_storage">Internal storage</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_view_teachers">Teachers</string>
    <string name="menu_view_students">Students</string>
    <string name="menu_add_teachers">Add Teachers</string>
    <string name="menu_add_students">Add Students</string>
    <string name="menu_student_profile">Student Profile</string>
    <string name="menu_student_monitor">Student Monitor</string>
    <string name="menu_teacher_profile">Teacher Profile</string>
    <string name="menu_msg_student">Message Student</string>
    <string name="menu_msg_teacher">Message Teacher</string>
    <string name="menu_msg_students">Message All Students</string>
    <string name="menu_msg_teachers">Message All Teachers</string>
    <string name="menu_view_classes">Classes</string>
    <string name="menu_view_timetable">View Timetable</string>
    <string name="menu_view_subjects">View Subjects</string>
    <string name="menu_view_exams">Examination</string>
    <string name="menu_add_exams">Add Examination</string>
    <string name="menu_view_results">Results</string>
    <string name="menu_view_assignments">Assignments</string>
    <string name="menu_view_attendance">Attendance</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_quiz">Quiz</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="menu_add_quiz">Add Quiz</string>
    <string name="menu_add_announcement">Add Announcement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>