<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_view_classes"
            android:title="@string/menu_view_classes"/>

        <item
            android:id="@+id/nav_view_teachers"
            android:title="@string/menu_view_teachers" />
<!--        <item-->
<!--            android:id="@+id/nav_view_students"-->
<!--            android:title="@string/menu_view_students" />-->

        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:onClick="logout"/>

    </group>
</menu>