<?xml version="1.0" encoding="utf-8"?>
<com.example.sampleschooladmin.Common.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:dragFromEdge="right">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/img_monitor_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_baseline_stars_24"
                android:text="Monitor"
                android:contentDescription="@string/menu_student_monitor" />

            <ImageButton
                android:id="@+id/img_profile_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_baseline_account_box_24"
                android:text="Profile"
                android:contentDescription="@string/menu_student_profile" />

            <ImageButton
                android:id="@+id/img_send_msg_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_baseline_send_24"
                android:text="Send Message"
                android:contentDescription="@string/menu_msg_student" />


        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_student"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/ic_student_icon"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_student_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/hvd"
                        android:text="Student Name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/img_monitor_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_gold_star"
                        android:layout_gravity="center_vertical|end"
                        android:visibility="gone"/>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</com.example.sampleschooladmin.Common.SwipeRevealLayout>